Little refactorization